<resources>
    <string name="app_name">Driver</string>
    <string name="action_settings">Settings</string>

    <string name="version_text">司机版 v1.0</string>
    <string name="login_username_hint">请输入手机号码注册登录</string>
    <string name="login_password_hint">请输入短信验证码</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="login_txt">立即登陆</string>
    <string name="licence_txt">点击登录表示您同意软件许可及服务协议</string>
    <string name="txt_kefu">联系客服</string>
    <string name="txt_count_trouble">账号问题</string>
    <!--find_fragment页面-->
    <string name="txt_all_src">全部货源</string>
    <string name="txt_xianlu_pipei">线路匹配</string>
    <string name="txt_kongcheng">空程匹配</string>
    <string name="txt_destination">目的地</string>
    <string name="txt_origin">始发地</string>
    <string name="txt_cartype">车型</string>
    <string name="txt_time">装车时间</string>
    <!--release_return-->
    <string name="txt_release_title">发布空程</string>
    <string name="txt_release_intro">提前发布空程计划，货源更早匹配</string>
    <string name="select_shi">选择始发地</string>
    <string name="select_mu">选择目的地</string>
    <string name="zhuang_time">装货时间</string>
    <string name="txt_carinfo">车辆信息</string>
    <string name="txt_car_num">车牌号</string>
    <string name="txt_car_status">车辆状态</string>
    <string name="txt_weight">余仓重量</string>
    <string name="txt_release_baojia">运输报价</string>
    <string name="txt_yuan">元</string>
    <string name="txt_message">给对方留言</string>
    <string name="txt_bt_fabu">立即发布</string>
    <string name="txt_baojia_hint">输入您的报价</string>
    <string name="txt_weight_hint">输入重量</string>
    <string name="txt_tiji_hint">输入体积</string>
    <!--release_list-->
    <string name="fabu_intro">点击发布一条空程车信息，平台帮你匹配合适
的资源，以消息形式及时推送给您。</string>
    <!--mine_fragment-->
    <string name="mine_message">我的消息</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_shouzhimingxi">收支明细</string>
    <string name="mine_bankcard">我的银行卡</string>
    <string name="mine_baozhengjingdetail">保证金详情</string>
    <string name="mine_renzheng">实名认证</string>
    <string name="mine_car">我的车辆</string>
    <string name="mine_cargroup">车队信息</string>
    <string name="mine_route">订阅路线</string>

    <!--cargroup_renzheng_one-->
    <string name="cargroup_intro">请按格式填写提交资料</string>
    
    <!--renzheng_main-->
    <string name="renzheng_intro">身份认证可以开启更多功能，接单，发布车源，拨打电话。接收调度等功能不再受限制</string>
    <string name="renzheng_personnal_txt">请准备好身份证,驾照,车辆信息</string>
    <string name="renzheng_cargroup_txt">请准备好身份证,公司验证信息</string>
    <string name="renzheng_diaodu_txt">请准备营业执照,身份证,车辆信息</string>

    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="hot_city">热门城市</string>
    <string name="error_view_no_data">暂无内容</string>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
