<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/shen_blue" >

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8.0dp" >

            <Button
                android:id="@+id/find_all_src"
                android:layout_width="90dip"
                android:layout_height="25dip"
                android:background="@drawable/left_bold"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/txt_all_src"
                android:textColor="@color/shen_blue"
                android:textSize="14sp" />

            <Button
                android:id="@+id/find_xianlu_pipei"
                android:layout_width="90dip"
                android:layout_height="25dip"
                android:background="@drawable/right_transparent"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/txt_xianlu_pipei"
                android:textColor="#ffffff"
                android:textSize="14sp" />
            <Button
                android:id="@+id/find_kongcheng"
                android:layout_width="90dip"
                android:layout_height="25dip"
                android:background="@drawable/right_transparent"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/txt_kongcheng"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_origin"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_origin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />

                <ImageView
                    android:id="@+id/d"
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/find_tv_origin"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_destination"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_destination"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />

                <ImageView
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_destination"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_cartype"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_cartype"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />

                <ImageView
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_cartype"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_time"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_12" />

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_time"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_10dp"
            android:background="@color/color_f2">

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/find_src_rlv"/>

        <com.app.gaolonglong.fragmenttabhost.view.EmptyLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/find_empty_view"/>
    </LinearLayout>

</LinearLayout>