<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/find_all_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/find_all_main"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_origin"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/txt_origin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14" />

                <ImageView
                    android:id="@+id/d"
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/find_tv_origin"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_destination"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="全国"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14" />

                <ImageView
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_destination"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_cartype"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/txt_cartype"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14" />

                <ImageView
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_cartype"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:background="@color/color_f2" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/find_tv_time"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/txt_time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_14" />

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="@dimen/txt_10dp"
                    android:layout_height="@dimen/txt_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/find_tv_time"
                    android:src="@mipmap/arrow_high" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/find_all_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/find_src_rlv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/color_f2" />

                </LinearLayout>

            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
    <com.app.gaolonglong.fragmenttabhost.view.EmptyLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/find_all_empty"/>
</LinearLayout>